--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -15,6 +15,8 @@ jobs:
  
       - name: Test
         run: |-
+          - echo ${{ secrets.DOCKER_USERNAME }}
+          - echo ${{ secrets.DOCKER_PASSWORD }}
           docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
           docker build -t cygnetops/react-test -f ./client/Dockerfile.dev ./client
           docker run -e CI=true cygnetops/react-test npm test
